# TerminalTrek

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: myThreads.h  terminal.h
app/src/: main.cpp  myThreads.cpp  terminal.cpp
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  joystick.h  usefulFunc.h
hal/src/: accelerometer.cpp  joystick.cpp  usefulFunc.cpp
